--- a/package.json
+++ b/package.json
@@ -14,22 +14,30 @@
   "author": "Subir <subir.chowdhuri@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "6.26.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
-    "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
-    "reselect": "^3.0.1",
+    "bootstrap-sass": "3.3.7",
+    "react": "16.3.2",
+    "react-bootstrap": "0.32.1",
+    "react-dom": "16.3.2",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.2.2",
+    "redux": "4.0.0",
+    "redux-saga": "0.16.0",
+    "reselect": "3.0.1",
     "web3": "1.0.0-beta.34"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
     "babel-loader": "7.1.4",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
+    "css-loader": "0.28.11",
+    "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
+    "node-sass": "4.9.0",
+    "sass-loader": "7.0.1",
+    "style-loader": "0.21.0",
     "webpack": "4.7.0",
     "webpack-cli": "2.1.3",
     "webpack-dev-server": "3.1.4"
