--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "4.0.0",
     "redux-saga": "0.16.0",
     "reselect": "3.0.1",
+    "timeago.js": "3.0.2",
     "web3": "1.0.0-beta.34"
   },
   "devDependencies": {
