--- a/package.json
+++ b/package.json
@@ -16,14 +16,12 @@
   "dependencies": {
     "bootstrap-sass": "3.3.7",
     "react": "16.3.2",
-    "react-bootstrap": "0.32.1",
+    "react-custom-scrollbars": "4.2.1",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
-    "react-router-dom": "4.2.2",
     "redux": "4.0.0",
     "redux-saga": "0.16.0",
     "reselect": "3.0.1",
-    "timeago.js": "3.0.2",
     "web3": "1.0.0-beta.34"
   },
   "devDependencies": {
